# kaos

./: .dockerignore  .gitignore  Dockerfile  README.md  flake.nix  manage.py  pyproject.toml
anki/: admin.py  models.py
anki/migrations/: 0001_initial.py
deploy/docker_compose/: README.md  docker-compose.yml
deploy/k3d/: README.md  dashboard-adminuser.yaml
deploy/k3d/solution/: db.yaml  django.yaml  kustomization.yaml
deploy/kind/: db.yaml  kustomization.yaml
deploy/minikube/: README.md  django.yaml
kaos/: asgi.py  celery.py  forms.py  settings.py  sites.py  urls.py  wsgi.py
proxy/: Dockerfile
scripts/: check_services.sh  run.sh
